@@ -1,3 +1,7 @@
+Apr 23, 2004
+
+  * ADDED: first version of lang and dataType support.  Improved test-suite
+
 Apr 22, 2004
 
   * ADDED: Support for arbitrary Prolog values for `Object'.  This will be
